--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
-<html lang="en_US">
+<html>
   <head>
     <meta charset="utf-8" />
+
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   </head>
+
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript> You need to enable JavaScript to run this app. </noscript>
+
     <div id="root"></div>
   </body>
+
   <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+  <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.js"></script>
+  <script>
+    $(function () {
+      $('#terminal').draggable();
+    });
+  </script>
 </html>
