Mini fixes + Stripe and Coin Buying handling

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <div id="root"></div>
     <div id="portal"></div>
   </body>
-
+  <script src="https://js.stripe.com/v3/"></script>
   <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
   <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.js"></script>
