--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
 
     <div id="root"></div>
     <div id="portal"></div>
+    <div id="purchase"></div>
   </body>
   <script src="https://js.stripe.com/v3/"></script>
   <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
