--- a/public/index.html
+++ b/public/index.html
@@ -16,12 +16,26 @@
 
   <script src="https://js.stripe.com/v3/"></script>
   <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-  <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-  <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.js"></script>
-
   <script>
-    $(function () {
-      $('#terminal').draggable();
+    const wrapper = document.querySelector('#root'),
+      header = wrapper.querySelector('#terminal');
+
+    function onDrag({ movementX, movementY }) {
+      let getStyle = window.getComputedStyle(wrapper);
+      let leftVal = parseInt(getStyle.left);
+      let topVal = parseInt(getStyle.top);
+      wrapper.style.left = `${leftVal + movementX}px`;
+      wrapper.style.top = `${topVal + movementY}px`;
+    }
+
+    header.addEventListener('mousedown', () => {
+      header.classList.add('active');
+      header.addEventListener('mousemove', onDrag);
+    });
+
+    document.addEventListener('mouseup', () => {
+      header.classList.remove('active');
+      header.removeEventListener('mousemove', onDrag);
     });
   </script>
 </html>
