--- a/public/index.html
+++ b/public/index.html
@@ -16,26 +16,22 @@
 
   <script src="https://js.stripe.com/v3/"></script>
   <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+  <script src="https://unpkg.com/interactjs/dist/interact.min.js"></script>
   <script>
-    const wrapper = document.querySelector('#root'),
-      header = wrapper.querySelector('#terminal');
+    const position = { x: 0, y: 0 };
 
-    function onDrag({ movementX, movementY }) {
-      let getStyle = window.getComputedStyle(wrapper);
-      let leftVal = parseInt(getStyle.left);
-      let topVal = parseInt(getStyle.top);
-      wrapper.style.left = `${leftVal + movementX}px`;
-      wrapper.style.top = `${topVal + movementY}px`;
-    }
+    interact('#terminal').draggable({
+      listeners: {
+        start(event) {
+          console.log(event.type, event.target);
+        },
+        move(event) {
+          position.x += event.dx;
+          position.y += event.dy;
 
-    header.addEventListener('mousedown', () => {
-      header.classList.add('active');
-      header.addEventListener('mousemove', onDrag);
-    });
-
-    document.addEventListener('mouseup', () => {
-      header.classList.remove('active');
-      header.removeEventListener('mousemove', onDrag);
+          event.target.style.transform = `translate(${position.x}px, ${position.y}px)`;
+        },
+      },
     });
   </script>
 </html>
